--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             <button class="cta-button pulse" onclick="scrollToWishes()">
                 See Your Special Message 💌
             </button>
+            
+            <a href="gallery.html" class="gallery-link">
+                <button class="cta-button pulse" style="margin-top: 15px; background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                    View Photo Gallery 📸💕
+                </button>
+            </a>
         </section>
 
         <!-- Birthday Message Section -->
@@ -201,7 +207,7 @@
 
     <!-- Background Music -->
     <audio id="bgMusic" loop>
-        <source src="assets/birthday-music.mp3" type="audio/mpeg">
+        <source src="assets/Richard Marx - Right Here Waiting (Official Music Video).mp3" type="audio/mpeg">
     </audio>
 
     <script src="js/script.js"></script>
