--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img src="https://media.tenor.com/t_jJjJ5VXkkAAAAm/bubu-dudu-sseeyall.webp" alt="Cute Animation" class="cute-gif">
             </div>
             
-            <p class="subtitle fade-in">To the most amazing person! 🎂</p>
+            <p class="subtitle fade-in">To the Cutest gurl i know! 🎂</p>
             
             <button class="cta-button pulse" onclick="scrollToWishes()">
                 See Your Special Message 💌
@@ -156,6 +156,7 @@
             <div class="card">
                 <h2>Find Your Love! 💕</h2>
                 <p class="game-instructions">Help the girl find her love! Use arrow keys or swipe to move through the maze 🎮</p>
+                <p class="game-instructions"><a href="scoreboard.html" style="color: #764ba2; font-weight: 600; text-decoration: underline;">View Scoreboard 🏆</a></p>
                 <div class="maze-stats">
                     <span class="stat-item">Moves: <span id="moveCount">0</span></span>
                     <span class="stat-item">Time: <span id="gameTime">0</span>s</span>
