--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </h1>
             
             <div class="gif-container bounce-in">
-                <img src="https://media.tenor.com/t_jJjJ5VXkkAAAAm/bubu-dudu-sseeyall.webp" alt="Cute Animation" class="cute-gif">
+                <img src="assets\3.jpg" alt="Cute Animation" class="cute-gif">
             </div>
             
             <p class="subtitle fade-in">To the Cutest gurl i know! 🎂</p>
