--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p class="message-text">
                         So... it's your birthday! 🎉
                         <br><br>
-                        I know this might seem a bit much, but I wanted to do something different. 
+                        So I wanted to do something different. 
                         <br><br>
                         Here's to another year of you being awesome. Hope this year brings you 
                         everything you've been working towards! ✨
@@ -101,7 +101,7 @@
                 <div class="wish-card">
                     <div class="wish-icon">🎁</div>
                     <h3>You've Got This</h3>
-                    <p>A/Ls next month? You're going to crush it. I know how hard you've been working. Believe in yourself like I believe in you.</p>
+                    <p>A/Ls next month? You're going to crush it. I know how hard you've been working. Believe in yourself.</p>
                 </div>
                 <div class="wish-card">
                     <div class="wish-icon">🌈</div>
