minor bug fixes

--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
                     <div class="photo-frame">
                         <img src="assets/2.jpg" alt="Beautiful Memory 2" class="gallery-photo">
                         <div class="photo-overlay">
-                            <p class="photo-caption">That beautiful smile 😊💖</p>
+                            <p class="photo-caption">That beautiful smile 💖</p>
                         </div>
                     </div>
                 </div>
